Made changes to pfmd